// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Venue Marker Tooltip should not render any data 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-hcbyx3-12 hqmRmo"
  >
    <div
      class="styledComponents__InfoWindowHeader-sc-hcbyx3-14 hfVCxy"
    >
      <a
        class="styledComponents__Title-sc-hcbyx3-15 cFTAqx"
      >
        Aparna-Venue
      </a>
    </div>
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        class="styledComponents__Wrapper-sc-1abm7iv-13 RarQS"
        style="width: 1250px;"
      >
        <div
          class="ant-pro-table"
        >
          <div
            class="ant-pro-card"
          >
            <div
              class="ant-pro-card-body"
              style="padding-top: 0px;"
            >
              <div
                class="ant-pro-table-list-toolbar"
              />
              <div
                class="ant-table-wrapper"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <div
                      class="ant-table ant-table-middle ant-table-scroll-horizontal"
                    >
                      <div
                        class="ant-table-container"
                      >
                        <div
                          class="ant-table-content"
                          style="overflow-x: auto; overflow-y: hidden;"
                        >
                          <table
                            style="min-width: 100%; table-layout: auto;"
                          >
                            <colgroup>
                              <col
                                style="width: 50px;"
                              />
                            </colgroup>
                            <thead
                              class="ant-table-thead"
                            >
                              <tr>
                                <th
                                  class="ant-table-cell"
                                />
                                <th
                                  class="ant-table-cell"
                                >
                                  Networking Devices
                                </th>
                                <th
                                  class="ant-table-cell"
                                >
                                  Clients
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="ant-table-tbody"
                            >
                              <tr
                                aria-hidden="true"
                                class="ant-table-measure-row"
                                style="height: 0px; font-size: 0px;"
                              >
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="ant-table-row ant-table-row-level-0"
                                data-row-key="1"
                              >
                                <td
                                  class="ant-table-cell"
                                >
                                  Wi-Fi
                                </td>
                                <td
                                  class="ant-table-cell"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-hcbyx3-13 bzmfDv"
                                  >
                                    <div
                                      class="ant-space-item"
                                    >
                                      No APs
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="ant-table-cell"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-hcbyx3-13 bzmfDv"
                                  >
                                    <div
                                      class="ant-space-item"
                                    >
                                      No AP Clients
                                    </div>
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="ant-table-row ant-table-row-level-0"
                                data-row-key="2"
                              >
                                <td
                                  class="ant-table-cell"
                                >
                                  Switch
                                </td>
                                <td
                                  class="ant-table-cell"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-hcbyx3-13 bzmfDv"
                                  >
                                    <div
                                      class="ant-space-item"
                                    >
                                      No Switches
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="ant-table-cell"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-hcbyx3-13 bzmfDv"
                                  >
                                    <div
                                      class="ant-space-item"
                                    >
                                      No Switch Clients
                                    </div>
                                  </div>
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1281px; height: 801px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Venue Marker Tooltip should render tooltip without padding 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-hcbyx3-12 fTNuVD"
  >
    <div
      class="styledComponents__InfoWindowHeader-sc-hcbyx3-14 hfVCxy"
    >
      <a
        class="styledComponents__Title-sc-hcbyx3-15 cFTAqx"
      >
        Aparna-Venue
      </a>
    </div>
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        class="styledComponents__Wrapper-sc-1abm7iv-13 RarQS"
        style="width: 1280px;"
      >
        <div
          class="ant-pro-table"
        >
          <div
            class="ant-pro-card"
          >
            <div
              class="ant-pro-card-body"
              style="padding-top: 0px;"
            >
              <div
                class="ant-pro-table-list-toolbar"
              />
              <div
                class="ant-table-wrapper"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <div
                      class="ant-table ant-table-middle ant-table-scroll-horizontal"
                    >
                      <div
                        class="ant-table-container"
                      >
                        <div
                          class="ant-table-content"
                          style="overflow-x: auto; overflow-y: hidden;"
                        >
                          <table
                            style="min-width: 100%; table-layout: auto;"
                          >
                            <colgroup>
                              <col
                                style="width: 50px;"
                              />
                            </colgroup>
                            <thead
                              class="ant-table-thead"
                            >
                              <tr>
                                <th
                                  class="ant-table-cell"
                                />
                                <th
                                  class="ant-table-cell"
                                >
                                  Networking Devices
                                </th>
                                <th
                                  class="ant-table-cell"
                                >
                                  Clients
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="ant-table-tbody"
                            >
                              <tr
                                aria-hidden="true"
                                class="ant-table-measure-row"
                                style="height: 0px; font-size: 0px;"
                              >
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="ant-table-row ant-table-row-level-0"
                                data-row-key="1"
                              >
                                <td
                                  class="ant-table-cell"
                                >
                                  Wi-Fi
                                </td>
                                <td
                                  class="ant-table-cell"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-hcbyx3-13 bzmfDv"
                                  >
                                    <div
                                      class="ant-space-item"
                                    >
                                      No APs
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="ant-table-cell"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-hcbyx3-13 bzmfDv"
                                  >
                                    <div
                                      class="ant-space-item"
                                    >
                                      No AP Clients
                                    </div>
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="ant-table-row ant-table-row-level-0"
                                data-row-key="2"
                              >
                                <td
                                  class="ant-table-cell"
                                >
                                  Switch
                                </td>
                                <td
                                  class="ant-table-cell"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-hcbyx3-13 bzmfDv"
                                  >
                                    <div
                                      class="ant-space-item"
                                    >
                                      No Switches
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="ant-table-cell"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-hcbyx3-13 bzmfDv"
                                  >
                                    <div
                                      class="ant-space-item"
                                    >
                                      No Switch Clients
                                    </div>
                                  </div>
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1281px; height: 801px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</DocumentFragment>
`;
